Include chromium-bin copy script and bundle chromium-bin for Vercel; set CHROMIUM_BIN env

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
-    "start": "next start"
+    "start": "next start",
+    "postinstall": "node ./scripts/copy-chromium-bin.js"
   },
   "dependencies": {
     "@sparticuz/chromium": "^138.0.2",
