--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "postinstall": "node ./scripts/copy-chromium-bin.js"
   },
   "dependencies": {
-    "@sparticuz/chromium": "^138.0.2",
+    "@sparticuz/chromium-min": "^138.0.2",
     "next": "15.5.2",
     "puppeteer-core": "^24.19.0",
     "react": "19.1.0",
