--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "postinstall": "node ./scripts/copy-chromium-bin.js"
+    "postinstall": "node ./scripts/download-chromium-bin.js"
   },
   "dependencies": {
     "@sparticuz/chromium-min": "^138.0.2",
     "next": "15.5.2",
     "puppeteer-core": "^24.19.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "tar": "^6.2.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
